[package]
authors = ["Hipy Cas <hipycas@gmail.com>"]
categories = [
  "command-line-interface",
  "graphics",
  "mathematics",
  "science",
  "visualization",
]
description = "A simple terminal graphing library"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["terminal", "graph", "math"]
license = "GPL-3.0"
name = "tgraph"
repository = "https://github.com/HipyCas/tgraph"
version = "0.2.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.3.0"
derivative = "2.2.0"
typed-builder = "0.10.0"
