[package]
name = "tgraph"
version = "0.2.2"
edition = "2021"
description = "A simple terminal graphing library"
authors = ["Hipy Cas <hipycas@gmail.com>"]
repository = "https://github.com/HipyCas/tgraph"
license = "GPL-3.0"
license-file = "LICENSE"
keywords = ["terminal", "graph", "math"]
categories = [
  "command-line-interface",
  "graphics",
  "mathematics",
  "science",
  "visualization",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.3.0"
derivative = "2.2.0"
typed-builder = "0.10.0"
